--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "resume",
+  "homepage": "https://kemper0110.github.io/resume/",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://kemper0110.github.io/resume/",
   "type": "module",
+
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -11,7 +12,6 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-
     "build:ssr": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
@@ -25,19 +25,23 @@
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.14",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "express": "^4.18.2",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
+    "serve-static": "^1.15.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
   }
 }
