--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "vite-image": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "babel-plugin-macros": "^3.1.0",
+    "twin.macro": "^3.4.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
