--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.13.2",
-    "vite-image": "^1.0.2"
+    "vite-imagetools": "^6.2.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.15",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
-    "babel-plugin-macros": "^3.1.0",
-    "twin.macro": "^3.4.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "twin.macro": "^3.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
