--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.15",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@babel/core": "^7.0.0-0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
